# eze-goats

./: .ezerc.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  azure-pipelines.yml
demos/license-example/: package-lock.json  package.json  run.sh
demos/password-example/: .ezerc.toml  package-lock.json  package.json
demos/sbom-example/: .ezerc.toml  package-lock.json  package.json  run.sh
demos/sca-example/: .ezerc.toml  .gitignore  package-lock.json  package.json
demos/sql-example/: .ezerc.toml  package-lock.json  package.json  run.sh
goat-container/: .ezerc.toml  Dockerfile
goat-container/docker-insecure/: .ezerc.toml  README.md  run.sh
goat-dotnet/insecure/: .ezerc.toml  .gitignore  EzeGoatApp.csproj  README.md
goat-dotnet/owasp-webgoat/: .ezerc.toml  README.md
goat-java/: .ezerc.toml  README.md  pom.xml
goat-java/damaged-pom/: .ezerc.toml  pom.xml
goat-java/insecure/: .ezerc.toml
goat-java/java-autorun/: .gitignore  build-sbom.sh  run-auto-eze.sh
goat-node/: .ezerc.toml  README.md
goat-node/damaged-package/: .ezerc.toml  package.json
goat-node/insecure/: .ezerc.toml  eze_report.sarif  package-lock.json
goat-php/: .ezerc.toml  README.md  composer.json  helloworld.php
goat-python/: .ezerc.toml  README.md
goat-python/python-autorun/nested-poetry/: README.md  pyproject.toml
goat-secrets/: .ezerc.toml  README.md  all_the_hard_coded_secrets.py  package-lock.json
goat-terraform/: .ezerc.toml  README.md  run_all_tools.sh  version_checkov.txt
scripts/: install-eze.sh  run-goats-local-docker-image.sh  run-goats.sh
(+22 files in other folders)
