[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["mckalea <anthony.mckale@riversafe.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pip = "^22.0.3"
requests = "<=2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
